microk8s-master/mysql-service.yaml
  GNU nano 4.8                                          mysql-service.yaml                                                     
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
