microk8s-master/wp-service.yaml
  GNU nano 4.8                                            wp-service.yaml                                                      
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: default
  labels:
    app: wordpress
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress
    tier: frontend
